css styles: done

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Styles -->
+    <link rel="stylesheet" href="styles.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
     <!-- Font-awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- Styles -->
-    <link rel="stylesheet" href="styles.css">
     <title>My Accordion | About Me...</title>
 </head>
 <body>
@@ -19,24 +19,39 @@
         <h1 class="main-title">Who Am I?</h1>
         <div class="accordion-container">
             <div class="accordion-title">About Me</div>
-            <div class="accordion-text">Hello, everyone! My name is Barış Emre Yalçın. I am from Turkey, and I live in Antakya. I am 26 years old, and I will turn 27 in November.</div>
+            <div class="accordion-content">
+                <div class="accordion-img">
+                    <img src="img/me.jpg" alt="">
+                </div>
+                <div class="accordion-text">Hello, everyone! My name is Barış Emre Yalçın. I am from Turkey, and I live in Antakya. I am 26 years old, and I will turn 27 in November.</div>
+            </div>
         </div>
         <div class="accordion-container">
             <div class="accordion-title">My Profession</div>
-            <div class="accordion-text">I am a Frontend Web Developer who has a bachelor degree in Electrical and Electronics Engineering. I started to learn Web Development in October, 2022, and I am continuing my career in this field. I can easily say that I am happy and hopeful for my future career...</div>
+            <div class="accordion-content">
+                <div class="accordion-img">
+                    <img src="img/fe.jpg" alt="">
+                </div>
+                <div class="accordion-text">I am a Frontend Developer who has a bachelor degree in Electrical & Electronics Engineering. I started to learn Web Development in October, 2022, and I am continuing my career in this field. I can easily say that I am happy and hopeful for my future career...</div>
+            </div>
         </div>
         <div class="accordion-container">
             <div class="accordion-title">My Passions</div>
-            <div class="accordion-text">I guess I don't even need to mention how much I like Frontend Web Development. Except fot this, I am crazy about basketball. I like to play and watch it. On the other hand, I can say that I am an arty person. I like drawing a lot. I have been drawing since my childhood.</div>
+            <div class="accordion-content">
+                <div class="accordion-img">
+                    <img src="img/ps.jpg" alt="">
+                </div>
+                <div class="accordion-text">I guess I don't even need to mention how much I like Frontend Web Development. Except for this, I am crazy about basketball. I like to play and watch it. On the other hand, I can say that I am an arty person. I like drawing a lot. I have been drawing since my childhood.</div>
+            </div>
         </div>
         <div class="social-links">
-            <a href="https://github.com/barisemreyalcin" class="social-link">
+            <a href="https://github.com/barisemreyalcin" class="social-link" target="_blank">
                 <i class="fa-brands fa-github"></i>
             </a>
-            <a href="https://www.linkedin.com/in/barisemreyalcin/" class="social-link">
+            <a href="https://www.linkedin.com/in/barisemreyalcin/" class="social-link" target="_blank">
                 <i class="fa-brands fa-linkedin-in"></i>
             </a>
-            <a href="https://www.instagram.com/b.e.y.art/" class="social-link">
+            <a href="https://www.instagram.com/b.e.y.art/" class="social-link" target="_blank">
                 <i class="fa-brands fa-instagram"></i>
             </a>
         </div>
