responsive design: done

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1 class="main-title">Who Am I?</h1>
         <div class="accordion-container">
             <div class="accordion-title">About Me</div>
-            <div class="accordion-content">
+            <div class="accordion-content first-accordion">
                 <div class="accordion-img">
                     <img src="img/me.jpg" alt="">
                 </div>
